--- a/src/pages/installation/installation_awsorgsetupsteps.html
+++ b/src/pages/installation/installation_awsorgsetupsteps.html
@@ -14,7 +14,7 @@ topic: GettingStarted
     </dl>
 
     <p>In this step we will use the Org_Create.ps1 script to
-        create an AWS Organization, and the OrgDev Organizational Unit.
+        create an AWS Organization, and the Organizational Units.
     </p>
     <ol>
         <li>Open a PowerShell terminal.</li>
@@ -35,16 +35,20 @@ Please Review and Confirm the following:
     Management Account Profile: AzMgmt 
     AWS Organizational Units to be created:
         - AzDevOU
+        - AzTestOU
+        - AzProdOU
 Continue y/n: y 
 Processing Starting 
 Creating Organization 
 Creating Organizational Units: 
     - AzDevOU created 
+    - AzTestOU created
+    - AzProdOU created
 Processing Complete</code></pre>
         </li>
     </ol>
     <h5>Step Summary</h5>
-    <p>In this step we created our AWS Organization and the OrgDevOU Organizational Unit.
+    <p>In this step we created our AWS Organization and the Organizational Units.
     </p>
 
 
