--- a/src/pages/installation/installation_devtools.html
+++ b/src/pages/installation/installation_devtools.html
@@ -6,10 +6,13 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h3>LazyStack Development Tools</h3>
-    <p>The LazyStack Development Tools run on your development workstation. We provide integrations for the Visual Studio 
-        IDE and .NET Command Line Tool. Most editors, like Visual Studio Code, provide a means to call the .NET CLI through 
-        the editor's UI so you can tailor your editor to use the LazyStack tools easily.
+    <p>The LazyStack Development Tools run on your development workstation. We provide integrations for the Visual
+        Studio IDE and .NET Command Line Tool. Most editors, like Visual Studio Code, provide a means to call the .NET
+        CLI through the editor's UI so you can also tailor your editor to use the LazyStack tools easily.
     </p>
+    <p>Note: Any workstation with access to an AWS Account with Administrative access may install and use the LazyStack
+        tools. It is recommended, but not necessary, to perform the SMF configuration to install the LazyStack tools and
+        perform the LazyStack Tutorial.</p>
     <h4>Steps</h4>
     <ul>
         <li>Step 1 - Developer Profile Setup</li>
