updated branch diagrams

--- a/src/pages/installation/smf_create_test_acct.html
+++ b/src/pages/installation/smf_create_test_acct.html
@@ -70,7 +70,7 @@ install: smf
      - Checking for successful account creation. TryCount=1 
      - AzTest account creation successful. AccountId: 123456789123
      - Moving AzPetTest account to AzTestOU organizational unit
- Adding AzPetTestAccess profile and associating it with the AzMgmt profile 
+ Adding AzPetTestAccess profile and associating it with aws cothe AzMgmt profile 
  Creating Administrators Group in AzPetTest account 
      - Adding policy AdministratorAccess 
  Creating IAM User AzPetTest in the AzPetTest account.
