--- a/src/pages/installation/smf_create_org_overview.html
+++ b/src/pages/installation/smf_create_org_overview.html
@@ -115,7 +115,7 @@ install: smf
         <tr>
             <th style="text-align: left">AWS Item</th>
             <th style="text-align: left">Name in Docs</th>
-            <th style="text-align: left">Name OrgCode "Isc", SysCode "Pet</th>
+            <th style="text-align: left">Name OrgCode "Isc", SysCode "Pet"</th>
         </tr>
         <tr>
             <td>Test Account</td>
