--- a/src/pages/userguide/generator_overview.html
+++ b/src/pages/userguide/generator_overview.html
@@ -11,7 +11,7 @@ topic: Generator
         Application Model (SAM) file(s). In addition, LazyStack reads generator "directives" from your 
         application's LazyStack.yaml file to control various generation options.
         </p>
-        <p>The LazyStack Generate Project tool is available as .NET Tool and as a Visual Studio IDE (Windows) Extension. </p>
+        <p>The LazyStack Generate Project tool is available as a .NET Tool and as a Visual Studio IDE (Windows) Extension. </p>
 
         <p>The .NET Tools command has this syntax:</p>
         <pre><code class="language-bash">lazystack projects [&lt;solutionfilepath>] </code></pre>
