--- a/src/pages/installation/smf_overview.html
+++ b/src/pages/installation/smf_overview.html
@@ -10,9 +10,10 @@ install: smf
 
         <p>The LazyStack SMF provides an end-to-end Software Management Framework integrating AWS Services, GitHub and the 
             LazyStack developer tools. Take a close look at the diagram below, we will be following the SMF Setup Steps 1 through 
-            4 to create your first AWS Organization, with one System containing a single serverless application stack. Later, 
-            you use steps 3.1 through 3.2 to add Systems as you need them and use steps 4.1 
-            through 4.3 to add new serverless application stacks to a System as you need them.
+            3 to create your first AWS Organization, with one system (called Tut). Later, in the LazyStack SMF Tutorial, you use 
+            step 4 to add serverless application stacks to the Tut system. After completing the tutorial you add additional 
+            Systems and Stacks when you need them. Keep in mind that AWS has a default limit of 4 accounts per organization, you 
+            can ask them to increase this limit as necessary.
         </p>
         <img src="/assets/img/LazyStackSMFSetup.svg" width="100%">
         <p></p>
