--- a/src/pages/installation/smf_create_stack.html
+++ b/src/pages/installation/smf_create_stack.html
@@ -23,5 +23,6 @@ install: smf
     </ul>
 
     <p><strong>Note: If you do not yet have a stack to define you can stop the SMF
-        setup here and come back to this step later.</strong></p>
+        setup here and come back to this step later. For instance, the LazySTack SMF Tutorial 
+        will direct you to this step when creating a new serverless stack.</strong></p>
 </div>
