--- a/src/pages/tutorial/tutorial_smf_overview copy.html
+++ b/src/pages/tutorial/tutorial_smf_overview copy.html
@@ -2,7 +2,7 @@
 layout: docpage
 section: Tutorial
 topic: Configure LazyStack
-tutorial: SMF
+tutorial: smf
 ---
 {{> tutorial_menu}}
 <div class=lz-r-content>
