--- a/src/pages/tutorial/tutorial_smf_overview.html
+++ b/src/pages/tutorial/tutorial_smf_overview.html
@@ -2,7 +2,7 @@
 layout: docpage
 section: Tutorial
 topic: Configure LazyStack
-tutorial: SMF
+tutorial: smf
 ---
 {{> tutorial_menu}}
 <div class=lz-r-content>
@@ -11,10 +11,9 @@ tutorial: SMF
 <div class="manual-list">
   <ul>
     <li>1) Create a System - "Tut"</li>
-    <li>1) Create a simple Serverless Stack Solution - Stk1</li>
-    <li>2) Create Stk1 repository on GitHub</li>
-    <li>3) Install TutTest CI/CD</li>
-    <li>4) Install TutProd CD</li>
+    <li>2) Create a simple Serverless Stack Solution - Stk1</li>
+    <li>3) Create Stk1 repository on GitHub</li>
+    <li>4) Install CI/CD</li>
     <li>5) Start Feature Development</li>
     <li>6) Create Pull Request</li>
     <li>7) Update Pull Request</li>
